Observe some but not all theme changes and make sure search button is visible

--- a/gmail/style.css
+++ b/gmail/style.css
@@ -18,6 +18,46 @@
 
 
 /* ==================================================
+ * 3RD PARTY EXTENTIONS
+ */
+
+/* Boomerang */
+
+/* Hide Pause Inbox button when Nav is hidden */
+html.simpl:not(.navOpen) .aeN #ibp-main {
+	display: none;
+}
+
+/* Hide top-right icons by default */
+html.simpl:not(.appSwitcher) #gb .manage_menu, /* Boomerang */
+html.simpl:not(.appSwitcher) #gb .mixmax-appbar, /* Mixmax */
+html.simpl:not(.appSwitcher) #gb #mailtrack-menu-opener, /* Mail track */ 
+html.simpl:not(.appSwitcher) #gb .inboxsdk__appButton /* Streak */
+{
+	display: none !important;
+}
+
+/* Show them when you hover over the profile pic */
+html.simpl.appSwitcher #gb .manage_menu, /* Boomerang */
+html.simpl.appSwitcher #gb .mixmax-appbar, /* Mixmax */
+html.simpl.appSwitcher #gb #mailtrack-menu-opener, /* Mail track */ 
+html.simpl.appSwitcher #gb .inboxsdk__appButton /* Streak */
+{
+	display: block !important;
+	position: absolute;
+	right: 0px;
+	padding-right: 108px !important;
+}
+
+
+/* Hide Search and Settings when showing extension buttons */
+html.simpl.appSwitcher.otherExtensions div[gh="tm"] div[gh="s"],
+html.simpl.appSwitcher.otherExtensions #gb form {
+	display: none;
+}
+
+
+/* ==================================================
  * GLOBAL / APP-LEVEL
  */
 
@@ -687,19 +727,28 @@ html.simpl div[gh="tl"] div[role="tabpanel"] h3 img {
 }
 
 /* Different treatment of read items in inbox except highlighted items in splitpane view*/
-html.simpl.lightTheme .yO:not(.aps) {
+html.simpl.lightTheme .yO:not(.aps),
+html.simpl.mediumTheme .yO:not(.aps) {
 	/* White with lighter text */
 	background-color: rgba(255,255,255,0.8);
 	color: #333;
 }
 /* Back to defaults for selected items */
-html.simpl.lightTheme .yO.x7 {
+html.simpl.lightTheme .yO.x7,
+html.simpl.mediumTheme .yO.x7 {
 	background-color: #c2dbff;
 	color: #202124;
 }
 /* Dim snippets for read messages a little more */
-html.simpl.lightTheme .yO .y2 {
+html.simpl.lightTheme .yO .y2,
+html.simpl.mediumTheme .yO .y2 {
 	opacity: 0.7;
+}
+
+/* Make sure minimized search icon is white for medium themes */
+html.simpl.mediumTheme.hideSearch #gb form button[role="button"] > svg,
+html.simpl.mediumTheme.hideSearch #gb form button[role="button"] > svg > path {
+	color: rgba(255,255,255,.87);
 }
 
 /* Different background colors for dark themes */
